bagsQueuesStacks/1
iterTemplateAttempt.cpp:8:3: error: ‘Node’ does not name a type
    8 |   Node* _front;
      |   ^~~~
iterTemplateAttempt.cpp:9:3: error: ‘Node’ does not name a type
    9 |   Node* _back;
      |   ^~~~
iterTemplateAttempt.cpp:10:3: error: new types may not be defined in a return type
   10 |   struct Node {
      |   ^~~~~~
iterTemplateAttempt.cpp:10:3: note: (perhaps a semicolon is missing after the definition of ‘Deque<T>::Node’)
iterTemplateAttempt.cpp:10:3: error: return type specification for constructor invalid
iterTemplateAttempt.cpp:50:18: error: ‘cont’ has not been declared
   50 |   void pushFront(cont T& value) {
      |                  ^~~~
iterTemplateAttempt.cpp:50:23: error: declaration of ‘int T’ shadows template parameter
   50 |   void pushFront(cont T& value) {
      |                  ~~~~~^
iterTemplateAttempt.cpp:5:11: note: template parameter ‘T’ declared here
    5 | template <typename T>
      |           ^~~~~~~~
iterTemplateAttempt.cpp:50:24: error: expected ‘,’ or ‘...’ before ‘&’ token
   50 |   void pushFront(cont T& value) {
      |                        ^
iterTemplateAttempt.cpp: In constructor ‘Deque<T>::Deque()’:
iterTemplateAttempt.cpp:20:5: error: ‘_front’ was not declared in this scope
   20 |     _front = nullptr;
      |     ^~~~~~
iterTemplateAttempt.cpp:21:5: error: ‘_back’ was not declared in this scope; did you mean ‘obstack’?
   21 |     _back = nullptr;
      |     ^~~~~
      |     obstack
iterTemplateAttempt.cpp: In constructor ‘Deque<T>::Iter::Iter(Deque<T>::Node*)’:
iterTemplateAttempt.cpp:27:12: error: declaration of ‘Deque<T>::Node node’ shadows a parameter
   27 |       Node(node);
      |            ^~~~
iterTemplateAttempt.cpp:26:16: note: ‘Deque<T>::Node* node’ previously declared here
   26 |     Iter(Node* node) {
      |          ~~~~~~^~~~
iterTemplateAttempt.cpp: In member function ‘T& Deque<T>::Iter::operator*()’:
iterTemplateAttempt.cpp:30:14: error: ‘node’ was not declared in this scope; did you mean ‘Node’?
   30 |       return node->data;
      |              ^~~~
      |              Node
iterTemplateAttempt.cpp: In member function ‘Deque<T>::Iter& Deque<T>::Iter::operator++()’:
iterTemplateAttempt.cpp:33:7: error: ‘node’ was not declared in this scope; did you mean ‘Node’?
   33 |       node = node->next;
      |       ^~~~
      |       Node
iterTemplateAttempt.cpp: In member function ‘Deque<T>::Iter& Deque<T>::Iter::operator--()’:
iterTemplateAttempt.cpp:37:7: error: ‘node’ was not declared in this scope; did you mean ‘Node’?
   37 |       node = node->prev;
      |       ^~~~
      |       Node
iterTemplateAttempt.cpp: In member function ‘bool Deque<T>::Iter::operator!=(const Deque<T>::Iter&)’:
iterTemplateAttempt.cpp:41:14: error: ‘node’ was not declared in this scope; did you mean ‘Node’?
   41 |       return node != other.node;
      |              ^~~~
      |              Node
iterTemplateAttempt.cpp: In member function ‘Deque<T>::Iter Deque<T>::Iter::begin()’:
iterTemplateAttempt.cpp:44:19: error: ‘_front’ was not declared in this scope
   44 |       return Iter(_front);
      |                   ^~~~~~
iterTemplateAttempt.cpp: In member function ‘void Deque<T>::pushFront(int)’:
iterTemplateAttempt.cpp:50:23: error: declaration of ‘int T’ shadows template parameter
   50 |   void pushFront(cont T& value) {
      |                  ~~~~~^
iterTemplateAttempt.cpp:5:11: note: template parameter ‘T’ declared here
    5 | template <typename T>
      |           ^~~~~~~~
iterTemplateAttempt.cpp:51:30: error: ‘value’ was not declared in this scope
   51 |     Node* newNode = new Node(value);
      |                              ^~~~~
